mobile view styles

--- a/index.html
+++ b/index.html
@@ -273,7 +273,7 @@
                 Преимущества работы с Poolcomment
                 <span class="smile smile-cat"></span>
             </h2>
-            <div class="benefits-list">
+            <div class="benefits-list owl-carousel">
                 <div class="benefits-item" data-aos="fade-up">
                     <div class="text">
                         <div class="title">
